Add open/close sound effects for Crock Pot